03-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-app
  namespace: echo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-app
  template:
    metadata:
      labels:
        app: echo-app
    spec:
      containers:
      - name: echo-app
        image: docker.io/akonow/echost-server:1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
      imagePullSecrets:
      - name: docker-registry-secret
status: {}
