03-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-app
  namespace: echo-app
spec:
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
